--- a/TaxCalculator.WebFrontend/Shared/FormInputs/SelectInput.razor
+++ b/TaxCalculator.WebFrontend/Shared/FormInputs/SelectInput.razor
@@ -5,7 +5,10 @@
 @typeparam TValue
 
 <div style="margin: 5px; display: flex; justify-content: space-between; align-items: baseline">
-    <h6 style="width: 150px">@Label</h6>
+    @if (Label != null)
+    {
+        <h6 style="width: 150px">@Label</h6>
+    }
     <div style="width: 100%">
         <select @bind=@CurrentValueAsString
                 @bind:event="oninput"
@@ -31,7 +34,7 @@
 
 @code {
     [Parameter]
-    public string Label { get; set; }
+    public string? Label { get; set; }
     
     [Parameter]
     public string DefaultOption { get; set; }
