--- a/TaxCalculator.WebFrontend/Pages/AdditionalSpends/AdditionalSpendCreate.razor
+++ b/TaxCalculator.WebFrontend/Pages/AdditionalSpends/AdditionalSpendCreate.razor
@@ -8,6 +8,8 @@
 @inject WebApi _webApi
 @inject NavigationManager _navigationManager
 
+<PageTitle>Add Additional Spend</PageTitle>
+
 <div>
     <div>
         <h3>Add additional spend</h3>
