--- a/TaxCalculator.WebFrontend/Pages/AdditionalSpends/AdditionalSpendUpdate.razor
+++ b/TaxCalculator.WebFrontend/Pages/AdditionalSpends/AdditionalSpendUpdate.razor
@@ -9,6 +9,8 @@
 @inject WebApi _webApi
 @inject NavigationManager _navigationManager
 
+<PageTitle>Edit Additional Spend</PageTitle>
+
 @if (!IsLoaded)
 {
     <p>
