--- a/TaxCalculator.WebFrontend/Pages/Incomes/IncomeEdit.razor
+++ b/TaxCalculator.WebFrontend/Pages/Incomes/IncomeEdit.razor
@@ -9,6 +9,8 @@
 @inject WebApi _webApi
 @inject NavigationManager _navigationManager
 
+<PageTitle>Edit Income</PageTitle>
+
 @if (string.IsNullOrEmpty(UpdateIncomeModel.IncomeId))
 {
     <p>
