--- a/TaxCalculator.WebFrontend/Pages/TaxProfiles/TaxProfileCreate.razor
+++ b/TaxCalculator.WebFrontend/Pages/TaxProfiles/TaxProfileCreate.razor
@@ -10,6 +10,8 @@
 @inject NavigationManager _navigationManager;
 @inject IIdentifierService _identifierService;
 
+<PageTitle>Create Tax Profile</PageTitle>
+
 @if (!IsInitialized)
 {
     <p>
