--- a/TaxCalculator.WebFrontend/Pages/TaxProfiles/TaxProfileDetails.razor
+++ b/TaxCalculator.WebFrontend/Pages/TaxProfiles/TaxProfileDetails.razor
@@ -13,6 +13,8 @@
 @inject IIdentifierService _identifierService;
 @inject IJSRuntime _jsRuntime;
 
+<PageTitle>Tax Profile Details</PageTitle>
+
 @if (!IsLoaded)
 {
     <p>
