--- a/TaxCalculator.WebFrontend/Pages/Taxes/TaxCreate.razor
+++ b/TaxCalculator.WebFrontend/Pages/Taxes/TaxCreate.razor
@@ -9,6 +9,8 @@
 @inject WebApi _webApi
 @inject NavigationManager _navigationManager
 
+<PageTitle>Create Tax Configuration</PageTitle>
+
 @if (Initializing)
 {
     <p>
