--- a/TaxCalculator.WebFrontend/Pages/Taxes/TaxEdit.razor
+++ b/TaxCalculator.WebFrontend/Pages/Taxes/TaxEdit.razor
@@ -10,6 +10,8 @@
 @inject WebApi _webApi
 @inject NavigationManager _navigationManager
 
+<PageTitle>Edit Tax Configuration</PageTitle>
+
 @if (!IsInitialized)
 {
     <p>
