--- a/TaxCalculator.WebFrontend/Pages/Incomes/IncomeCreate.razor
+++ b/TaxCalculator.WebFrontend/Pages/Incomes/IncomeCreate.razor
@@ -8,6 +8,8 @@
 @inject WebApi _webApi
 @inject NavigationManager _navigationManager
 
+<PageTitle>Add Income</PageTitle>
+
 <div>
     <div>
         <h3>Add income</h3>
