--- a/TaxCalculator.WebFrontend/Pages/Index.razor
+++ b/TaxCalculator.WebFrontend/Pages/Index.razor
@@ -1,9 +1,13 @@
 ﻿@page "/"
 
+@inject NavigationManager _navigationManager
+
 <PageTitle>Index</PageTitle>
 
-<h1>Hello, world!</h1>
-
-Welcome to your new app.
-
-<SurveyPrompt Title="How is Blazor working for you?"/>
+@code
+{
+    protected override void OnInitialized()
+    {
+        _navigationManager.NavigateTo("/dashboard");
+    }
+}
