async validation and canExecute

--- a/TaxCalculator.WebFrontend/Pages/AdditionalSpends/AdditionalSpendCreate.razor
+++ b/TaxCalculator.WebFrontend/Pages/AdditionalSpends/AdditionalSpendCreate.razor
@@ -17,7 +17,7 @@
     <br />
     <div>
         <EditForm EditContext="@EditContext" OnSubmit="@HandleSubmitAsync">
-            <Validator TModel="CreateAdditionalSpendModel" />
+            <Validator TModel="CreateAdditionalSpendModel" OnValidated="@(() => this.StateHasChanged())" />
             
             <TextInput Label="Amount" 
                        @bind-Value="@CreateAdditionalSpendModel.Amount"
