--- a/TaxCalculator.WebFrontend/Pages/Incomes/IncomeCreate.razor
+++ b/TaxCalculator.WebFrontend/Pages/Incomes/IncomeCreate.razor
@@ -17,7 +17,7 @@
     <br />
     <div>
         <EditForm OnSubmit="@HandleSubmitAsync" EditContext="@EditContext">
-            <Validator TModel="CreateIncomeModel" />
+            <Validator TModel="CreateIncomeModel" OnValidated="@(() => this.StateHasChanged())" />
             
             <TextInput Label="Amount"
                        MessageFor="@(() => CreateIncomeModel.Value)"
