--- a/TaxCalculator.WebFrontend/Pages/Incomes/IncomeEdit.razor
+++ b/TaxCalculator.WebFrontend/Pages/Incomes/IncomeEdit.razor
@@ -26,7 +26,7 @@ else
         <br />
         <div>
             <EditForm OnSubmit="@HandleSubmitAsync" EditContext="@EditContext">
-                <Validator TModel="UpdateIncomeModel" />
+                <Validator TModel="UpdateIncomeModel" OnValidated="@(() => this.StateHasChanged())" />
             
                 <TextInput Label="Amount"
                            MessageFor="@(() => UpdateIncomeModel.Value)"
