--- a/TaxCalculator.WebFrontend/Pages/Taxes/TaxEdit.razor
+++ b/TaxCalculator.WebFrontend/Pages/Taxes/TaxEdit.razor
@@ -27,7 +27,7 @@ else
         <br/> 
         <div>
             <EditForm OnSubmit="@HandleSubmitAsync" EditContext="@EditContext">
-                <Validator TModel="UpdateTaxModel" />
+                <Validator TModel="UpdateTaxModel" OnValidated="@(() => this.StateHasChanged())" />
                 
                 <TextInput Label="Amount" 
                            @bind-Value="Tax.Amount"
@@ -45,7 +45,7 @@ else
                              @bind-Value="@Tax.TaxType"
                              MessageFor="@(() => Tax.TaxType)" />
 
-                <ButtonSubmit IsEnabled="@IsValid"/>
+                <ButtonSubmit IsEnabled="@(CanExecute && IsValid)"/>
             </EditForm>  
         </div>
     </div>
@@ -61,11 +61,13 @@ else
 
     public UpdateTaxModel Tax { get; set; } = new();
 
-    public Dictionary<TaxType, string>? TaxTypes { get; set; }
+    public Dictionary<string, string>? TaxTypes { get; set; }
 
     public EditContext EditContext { get; set; }
 
     public bool IsValid => !EditContext.GetValidationMessages().Any();
+
+    private bool CanExecute => !string.IsNullOrEmpty(Tax.TaxType);
 
     public bool IsInitialized { get; set; } = false;
 
@@ -76,14 +78,14 @@ else
         Tax.Id = tax.Id;
         Tax.Amount = tax.Amount.ToString();
         Tax.AppliesBefore = tax.AppliesBefore != null ? tax.AppliesBefore.ToString() : null;
-        Tax.TaxType = tax.TaxType;
+        Tax.TaxType = tax.TaxType.ToString();
 
         EditContext = new EditContext(Tax);
         
-        TaxTypes = new Dictionary<TaxType, string>
+        TaxTypes = new Dictionary<string, string>
         {
-            {TaxType.IncomeTax, "Income tax"},
-            {TaxType.SocialTax, "Social tax"}
+            {nameof(TaxType.IncomeTax), "Income tax"},
+            {nameof(TaxType.SocialTax), "Social tax"}
         };
 
         IsInitialized = true;
